# redoxer

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Dockerfile-aarch64  Dockerfile-i586  Dockerfile-riscv64gc  README.md  base.toml  bootloader.toml  flake.nix  redoxer.sh  redoxer.toml  rustfmt.toml
daemon/: Cargo.toml
daemon/src/: main.rs
example/: Cargo.toml  Xargo.toml  redoxer.sh
example/src/: main.rs
res/: 20_env  29_redoxer  30_redoxer  base.toml  gui.toml  run_redoxer.ion  toolchain.env  update.sh
src/: cargo.rs  env.rs  exec.rs  install.rs  lib.rs  main.rs  pkg.rs  redoxfs.rs  toolchain.rs  writer.rs
