[package]
name = "redoxer"
version = "0.2.57"
description = "Method for quickly running programs inside of Redox from a KVM capable OS."
license = "MIT"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
repository = "https://gitlab.redox-os.org/redox-os/redoxer"
edition = "2018"

[dependencies]
dirs = "6.0.0"
redox_installer = "0.2.37"
redox-pkg = { version = "0.2.8", features = ["indicatif"] }
redox_syscall = "0.5"
redoxfs = "0.8"
tempfile = "3.20.0"
toml = "0.9"
proc-mounts = "0.3.0"
anyhow = "^1"
