[package]
name = "redoxer"
version = "0.2.61"
description = "Method for quickly running programs inside of Redox from a KVM capable OS."
license = "MIT"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
repository = "https://gitlab.redox-os.org/redox-os/redoxer"
edition = "2018"

[dependencies]
anyhow = "^1"
dirs = "6.0.0"
proc-mounts = { version = "0.3.0", optional = true }
redox_installer = { version = "0.2", optional = true }
redox-pkg = { version = "0.2.8", features = ["indicatif"], optional = true }
redox_syscall = { version = "0.6", optional = true }
redoxfs = { version = "0.8", optional = true }
tempfile = { version = "3.20.0", optional = true }
toml = { version = "0.9", optional = true }

[features]
default = ["cli-pkg", "cli-exec"]
cli-pkg = ["redox-pkg"]
cli-exec = [
    "redox_installer",
    "redox_syscall",
    "redoxfs",
    "tempfile",
    "proc-mounts",
    "toml",
]
